--- a/configuration.yml
+++ b/configuration.yml
@@ -1,10 +1,40 @@
-chip_number: 10
 
+chip_number: 10
 workplace_width_amount: 5
 
-# full start ip is '192.168.4.2'
+#  For example below:
+#  chip_number            = 11 
+#  workplace_width_amount = 4
+
+#################################
+#       #       #       #       #
+#   1   #   2   #   3   #   4   #
+#       #       #       #       #
+#################################
+#       #       #       #       #
+#   5   #   6   #   7   #   8   #
+#       #       #       #       #
+#################################
+#       #       #       #       #
+#   9   #   10  #   11  #       #
+#       #       #       #       #
+#################################
+
+#! -------------------------------------------------- !#
+
 const_ip_part: '192.168.4.'
 start_ip: 2
+
+# if your RPI IPs are:
+#   '192.168.4.2'
+#   '192.168.4.3'
+#   '192.168.4.4'
+#    ...........
+#   '192.168.4.11'
+# Then const_ip_part = 192.168.4.
+# And  start_ip      = 2 (The last number of IP)
+
+#! -------------------------------------------------- !#
 
 # you can choose 2 options: 'scada' or 'human'
 use_case: 'scada'
