--- a/configuration.yml
+++ b/configuration.yml
@@ -22,19 +22,5 @@ workplace_width_amount: 5
 
 #! -------------------------------------------------- !#
 
-const_ip_part: '192.168.4.'
-start_ip: 2
-
-# if your RPI IPs are:
-#   '192.168.4.2'
-#   '192.168.4.3'
-#   '192.168.4.4'
-#    ...........
-#   '192.168.4.11'
-# Then const_ip_part = 192.168.4.
-# And  start_ip      = 2 (The last number of IP)
-
-#! -------------------------------------------------- !#
-
 # you can choose 2 options: 'scada' or 'human'
-use_case: 'scada'
+use_case: 'human'
