--- a/configuration.yml
+++ b/configuration.yml
@@ -24,3 +24,6 @@ workplace_width_amount: 5
 
 # you can choose 2 options: 'scada' or 'human'
 use_case: 'scada'
+
+# Raspberry server IP
+gateway_client_ip: '192.168.88.231'
